# fmri_twins_prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  evidently_drift_report.html  pyproject.toml  requirements.txt  setup.py  tox.ini  trainer.dockerfile
.github/workflows/: tests.yml
configs/: data_preprocess.yaml  data_trainig.yaml  data_training.yaml
docs/: Makefile  conf.py  index.rst  make.bat
src/: __init__.py  util.py
src/data/: __init__.py  download_dataset.py  make_dataset.py  preprocess_dataset.py  twins_graphs_dataset.py  utils.py
src/deployment/: torchhandler.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  model.py  predict_model.py  train_model.py  utils.py
src/monitoring/: evidently_monitoring.py
src/visualization/: __init__.py  visualize.py
tests/: test_download_dataset.py  test_sample.py
